Updated searchAirpports method. Formatted project